Better styling on mobile and fix to stream

--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -1,8 +1,11 @@
 .features {
   display: flex;
   align-items: center;
-  padding: 2rem 0;
   width: 100%;
+}
+
+.feature {
+  padding: 2rem 0;
 }
 
 .featureSvg {
