--- a/src/components/HomepageHeader.module.css
+++ b/src/components/HomepageHeader.module.css
@@ -1,9 +1,17 @@
 .heroBanner {
-  padding: 4rem 0 2rem 0;
+  padding: 4rem 0 1rem 0;
   text-align: left;
   position: relative;
   overflow: hidden;
   border-bottom: 3px solid;
+}
+
+.col {
+  padding-bottom: 1rem;
+}
+
+.pictureCol {
+  text-align: center;
 }
 
 
